<resources>
    <string name="app_name">REYLLA</string>
    <string name="please_wait">please wait</string>
    <string name="please_click_back_again_to_exit">double click the back button to  exit</string>
    <string name="default_notification_channel_id">reylla_notification_channel_id</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="intro_description">Our task must be to free ourselves… by widening our circle of compassion to embrace all living creatures and the whole of nature and it’s beauty</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_as">REGISTER AS</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="book_services">I want to book services</string>
    <string name="first_name">First Name</string>
    <string name="add_photo">ADD PHOTO</string>
    <string name="register_as_customer">Register as customer</string>
    <string name="register_as_a_customer">Register as a customer</string>
    <string name="your_image">Your Image</string>
    <string name="register">Register</string>
    <string name="password">password</string>
    <string name="date_of_birth">date of birth</string>
    <string name="birth_date">Birth Date</string>
    <string name="background_image">background image</string>
    <string name="register_as_individual">register as individual</string>
    <string name="register_as_company">register as company</string>
    <string name="already_have_an_account">Already have an account??</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_to_reylla">welcome to reylla</string>
    <string name="last_name">last name</string>
    <string name="address">address</string>
    <string name="company_name">Company name</string>
    <string name="company_registration_number">company registration number</string>
    <string name="registration_number">Registration Number</string>
    <string name="company_address">Company Address</string>
    <string name="select_location_on_google_maps">select location on google maps</string>
    <string name="phone_number">phone number</string>
    <string name="app_version">v-: 1.0</string>
    <string name="find_what_you_need">Find What you need.</string>
    <string name="title_activity_service_providers_main_page">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_settings">Settings</string>
    <string name="title_bookings">Bookings</string>
    <string name="super_services">Services</string>
    <string name="add_images">Add Images</string>
    <string name="add_to_gallery">Add To Gallery</string>
    <string name="text_add_image">ADD LOGO</string>
    <string name="from_gallery">FROM GALLERY</string>
    <string name="add_hair_care">add hair care</string>
    <string name="there_s_no_service_yet_please_add">There\'s no service yet please add</string>
    <string name="add_bridal_care">add bridal care</string>
    <string name="add_makeup">add Makeup</string>
    <string name="there_s_no_available_service_yet_please_add">There\'s no available service yet,please add</string>
    <string name="add_massage">add massage</string>
    <string name="add_nail_care">Add nail care</string>
    <string name="save">Save</string>
    <string name="duration_taken_to_offer_the_service_in_hours">Duration Taken To Offer The Service in hours</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA1P5i0hTpnf2PKRCJgDBFT8pbxOiCsb14</string>
    <string name="title_activity_maps">Map</string>
    <string name="location">Location</string>
    <string name="image_selection_failed">fail to load the image</string>
    <string name="read_storage_permission_denied">permission denied</string>
    <string name="msg_profile_update_success">profile updated successfully</string>
    <string name="c_address">your address</string>
    <string name="selecting_service">Welcome to our salon, Select the services</string>
    <string name="title_my_cart">My Cart</string>

    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>

    <string name="lbl_out_of_stock">OUT OF STOCK</string>
    <string name="msg_item_removed_successfully">Item removed successfully.</string>


    <string name="title_my_order_details">MY ORDER DETAILS</string>
    <string name="order_details_lbl">Order Details</string>
    <string name="order_details_lbl_order_id">Order ID</string>
    <string name="order_details_lbl_order_date">Order Date</string>
    <string name="order_details_lbl_order_status">Order Status</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_details_lbl_shipping_address">Shipping Address</string>

    <string name="order_status_in_process">In Process</string>
    <string name="order_status_delivered">Delivered</string>

    <string name="title_sold_products">Sold Products</string>
    <string name="no_products_sold_out_yet">No products sold out yet!</string>

    <string name="title_sold_product_details">SOLD PRODUCT DETAILS</string>


    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than stock quantity.</string>
    <string name="service_charge">Service Charge</string>
    <string name="confirm_service">CONFIRM SERVICE</string>
    <string name="no_orders_placed_yet">No Orders Has Been Placed Yet</string>
    <string name="no_bookings_placed_yet">No bookings has been placed Yet</string>
    <string name="your_profile_image">Your profile image</string>
</resources>