<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".activities.CompanyRegister">

<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar_company_sign_up_activity"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/colorPrimary"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:text="SIGN UP"
        android:textColor="@color/primary_text_color"
        android:textSize="20sp"
        android:textStyle="bold" />

</androidx.appcompat.widget.Toolbar>
<ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.06"
    android:layout_marginTop="30dp"
    android:background="@drawable/splash_img_backg"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="55dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/register_as_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="10dp"
        app:cardCornerRadius="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="REGISTER AS COMPANY"
                android:layout_marginTop="2dp"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_indiv_profile_image"
                android:layout_width="@dimen/my_profile_user_image_size"
                android:layout_height="@dimen/my_profile_user_image_size"
                android:contentDescription="Company Logo"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/profileimg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/tv_indiv_add_photo"
                android:layout_gravity="center_horizontal"
                android:text="@string/add_photo"
                android:textColor="#792C58"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="2dp"
                android:textSize="24sp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:textColorHint="#000000"
                    android:focusable="true"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_company_name"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:paddingStart="6dp"
                        android:contentDescription="@string/company_name"
                        android:background="@drawable/gray_border_shape_rounded"
                        android:hint="Company Name"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="#000000"
                android:focusable="true"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_registration_number"
                    android:layout_marginStart="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:paddingStart="10dp"
                    android:contentDescription="@string/company_registration_number"
                    android:background="@drawable/gray_border_shape_rounded"
                    android:hint="@string/registration_number"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#000000"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_company_address"
                        android:layout_width="match_parent"
                        android:contentDescription="@string/address"
                        android:layout_height="35dp"
                        android:layout_marginStart="2dp"
                        android:background="@drawable/gray_border_shape_rounded"
                        android:hint="@string/company_address"
                        android:paddingStart="10dp"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingEnd="5dp"
                    android:contentDescription="@string/select_location_on_google_maps"
                    app:srcCompat="@drawable/ic_location_on_24" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="#000000"
                android:focusable="true"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_company_phonenumber"
                    android:layout_marginStart="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:paddingStart="10dp"
                    android:contentDescription="@string/phone_number"
                    android:background="@drawable/gray_border_shape_rounded"
                    android:hint="Phone Number"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="#000000"
                android:focusable="true"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_company_email"
                    android:layout_marginStart="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:paddingStart="10dp"
                    android:contentDescription="Email"
                    android:background="@drawable/gray_border_shape_rounded"
                    android:hint="Email"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:focusable="true"
                android:textColorHint="#000000"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_company_password"
                    android:layout_marginStart="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:paddingStart="10dp"
                    android:contentDescription="@string/password"
                    android:inputType="textPassword"
                    android:background="@drawable/gray_border_shape_rounded"
                    android:hint="Password"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_company_register"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_button_rounded"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:layout_weight="@integer/google_play_services_version"
                android:padding="5dp"
                android:text="Register"
                android:contentDescription="@string/register"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>