<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.agentclients.RegisterCustomer">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_customer_sign_up_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="SIGN UP"
            android:textColor="@color/primary_text_color"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.06"
        android:layout_marginTop="30dp"
        android:background="@drawable/splash_img_backg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/register_as_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:elevation="10dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/register_as_customer"
                    android:textColor="#000000"
                    android:contentDescription="@string/register_as_a_customer"
                    android:textAllCaps="true"
                    android:layout_marginTop="2dp"
                    android:textSize="22sp"
                    android:textStyle="bold" />


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile_customer_image"
                    android:layout_width="@dimen/my_profile_user_image_size"
                    android:layout_height="@dimen/my_profile_user_image_size"
                    android:contentDescription="@string/your_image"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/profileimg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_add_photo"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorAccent"
                    android:text="@string/add_photo"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginTop="2dp"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="180dp"
                        android:focusable="true"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_customer_first_name"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:paddingStart="6dp"
                            android:inputType="textPersonName"
                            android:contentDescription="First name"
                            android:background="@drawable/gray_border_shape_rounded"
                            android:hint="@string/first_name"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout"
                        android:layout_width="185dp"
                        android:focusable="true"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_customer_last_name"
                            android:layout_marginStart="2dp"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:paddingStart="5dp"
                            android:inputType="textPersonName"
                            android:contentDescription="Last name"
                            android:layout_marginEnd="2dp"
                            android:background="@drawable/gray_border_shape_rounded"
                            android:hint="Last Name"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:focusable="true"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_customer_birth_date"
                        android:layout_marginStart="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:paddingStart="10dp"
                        android:inputType="date"
                        android:contentDescription="@string/date_of_birth"
                        android:background="@drawable/gray_border_shape_rounded"
                        android:hint="@string/birth_date"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_customer_address"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_marginStart="2dp"
                            android:background="@drawable/gray_border_shape_rounded"
                            android:contentDescription="@string/c_address"
                            android:hint="Address"
                            android:inputType="textPostalAddress"
                            android:paddingStart="10dp"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/location_img"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:paddingEnd="5dp"
                        android:clickable="true"
                        android:focusable="true"
                        app:srcCompat="@drawable/ic_location_on_24" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:focusable="true"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_customer_phonenumber"
                        android:layout_marginStart="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:contentDescription="Phone Number"
                        android:paddingStart="10dp"
                        android:background="@drawable/gray_border_shape_rounded"
                        android:hint="Phone Number"
                        android:inputType="phone"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:focusable="true"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_customer_email"
                        android:layout_marginStart="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:paddingStart="10dp"
                        android:inputType="textEmailAddress"
                        android:contentDescription="Email"
                        android:background="@drawable/gray_border_shape_rounded"
                        android:hint="Email"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:focusable="true"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_customer_gender"
                        android:layout_marginStart="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:paddingStart="10dp"
                        android:inputType="text"
                        android:contentDescription="gender"
                        android:background="@drawable/gray_border_shape_rounded"
                        android:hint="Gender"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_customer_password"
                        android:layout_marginStart="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:paddingStart="10dp"
                        android:inputType="textPassword"
                        android:background="@drawable/gray_border_shape_rounded"
                        android:hint="Password"
                        android:contentDescription="@string/password"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_customer_register"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_weight="@integer/google_play_services_version"
                    android:background="@drawable/shape_button_rounded"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/register"
                    android:contentDescription="@string/register"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>